@@ -1,3 +1,7 @@
+2007-03-25  dima  <dima.exe@gmail.com>
+
+	* rails-scripts.el: refactored code
+
 2007-03-24  dima  <dima.exe@gmail.com>
 
 	* rails-unit-test-minor-mode.el (rails-unit-test-minor-mode): fixed
